# nonparametric-statistics-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_ecdf_and_rank_tests.ipynb  02_permutation_tests.ipynb  03_bootstrap_methods.ipynb  04_density_estimation_and_kde.ipynb  05_nonparametric_regression.ipynb  06_power_and_robustness_simulations.ipynb
src/nonparametric_statistics_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/nonparametric_stats/: __init__.py  bootstrap.py  ecdf.py  kde.py  permutation.py  rank_tests.py  regression.py  simulation.py
tests/: test_bootstrap.py  test_ecdf.py  test_kde.py  test_permutation.py  test_rank_tests.py  test_regression.py  test_simulation.py
